--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/entity": "^16.2.0",
     "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "boxicons": "^2.1.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
